# grizabella

./: .gitignore  .hintrc  .pylintrc  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  debug_init.py  debug_sqlite_write.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_kuzu_open.py
.github/workflows/: docs.yml
api/client/: index.html
api/core_models/: index.html
api/mcp_server/: index.html
api/query_models/: index.html
core_concepts/: index.html
docs/: architectural_update_plan.md  complex_query_engine_design.md  foundational_design.md  implementation_specification.md  memory_leak_fix_design.md  test_suite_regression_analysis_report.md  ui_design_v0.1.md
docs/api_reference/source/: api_client.rst  conf.py  core_models.rst  core_query_models.rst  ui_main.rst
docs/testing/: e2e_scenario_v1.md
docs/user_guide/: core_concepts.md  getting_started.md  index.md  installation.md  mcp_server_api_guide.md  pyside6_ui_guide.md  python_api_detailed.md  troubleshooting_faq.md
examples/: README.md  basic_usage.py  complex_query_example.py  embedding_search_example.py
getting_started/: index.html
grizabella/api/: client.py
grizabella/core/: _db_manager_helpers.py  connection_pool.py  db_manager.py  models.py  query_engine.py  query_models.py  reranker.py
grizabella/mcp/: server.py
installation/: index.html
mcp_server_api_guide/: index.html
pyside6_ui_guide/: index.html
python_api_detailed/: index.html
scripts/: README.md  start_mcp_servers.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/installation/: index.html
site/search/: search_index.json
tests/: conftest.py  test_connection_management.py
tests/e2e/: test_grizabella_e2e_scenario.py  test_grizabella_mcp_e2e.py
tests/integration/: test_bulk_embeddings.py  test_kuzu_integration.py  test_lancedb_semantic_search.py
troubleshooting_faq/: index.html
typescript/: .gitignore  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
typescript/docs/: api-reference.md  best-practices.md  error-handling.md  examples-guide.md  migration-guide.md  performance-optimization.md  performance-tips.md  quickstart.md  setup-guide.md  troubleshooting.md
typescript/examples/: advanced-patterns.ts  basic-usage-working.ts  basic-usage.ts  data-operations.ts  index.ts  query-search.ts  schema-management.ts
typescript/src/: index.ts
typescript/tests/: README.md  setup.ts
(+75 files in other folders)
