[tool.poetry]
name = "grizabella"
version = "0.7.0"
description = "A tri-layer memory framework for LLM solutions."
authors = ["Grizabella Project Contributors <contributors@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/pwilkin/grizabella"
repository = "https://github.com/pwilkin/grizabella"
documentation = "https://pwilkin.github.io/grizabella"
keywords = ["python", "llm", "memory", "vector-database", "graph-database", "sqlite", "lancedb", "ladybug", "pyside6", "sentence-transformers", "fastmcp", "ai", "multi-modal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
packages = [{include = "grizabella"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.14" # Specify a compatible Python version
pydantic = "^2.12.0"  # litellm 1.83.x pins pydantic to 2.12.5
lancedb = "^0.30.2"
sentence-transformers = "^5.1.0"
ladybug = "^0.17.1"  # 0.17.x fixes a native SIGSEGV on the per-row MERGE write path (unguarded PK-visibility check, upstream 435f244)
pandas = "^2.3.3" # Added for ladybug adapter query result handling
fastmcp = ">=2.10.6,<2.14"  # 2.14 hangs on ListToolsRequest — retry after upstream fix
PySide6 = "^6.9.0"
optimum = "^1.27.0"
qt_material = "^2.17"
litellm = ">=1.74.4,<1.83"  # For OpenRouter integration; 1.83.x pins python-dotenv==1.0.1 and pydantic==2.12.5, conflicting with fastmcp/pydantic ranges
pytest-asyncio = "^1.3.0"
psutil = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.7" # Or your desired version
# Add other dev dependencies here if needed
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[tool.poetry.scripts]
grizabella-ui = "grizabella.ui.app:main"
grizabella-mcp = "grizabella.mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
